Fix broken layout with small width

--- a/src/popup/styles/Modal.scss
+++ b/src/popup/styles/Modal.scss
@@ -32,6 +32,7 @@
     border-radius: 2px;
     box-shadow: 0px 2px 3px 0 rgba(0, 0, 0, 0.1);
     width: 400px;
+    max-width: 80%;
     padding: 10px;
     transition: 200ms;
     -moz-user-select: none;
