--- a/src/popup/styles/SessionDetailsArea.scss
+++ b/src/popup/styles/SessionDetailsArea.scss
@@ -66,7 +66,6 @@
         border: none;
         background-color: transparent;
         cursor: pointer;
-        word-break: break-all;
         transition: all 100ms;
         svg {
           width: 13px;
